# TXTMAGE

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
txtmage/assets/css/: style.css
txtmage/assets/js/: code.js
txtmage/config/: asgi.py  authenticate.py  urls.py  views.py  wsgi.py
txtmage/config/settings/: base.py
txtmage/templates/: index.html  login.html
